--- a/src/pages/chart.pug
+++ b/src/pages/chart.pug
@@ -5,16 +5,31 @@ html(lang="ru")
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         meta(name="description" content="Usual")
         <title>Usual</title>
-        <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
         <!-- css global -->
         <link rel="stylesheet" href="./css/chart.css">
         <!-- //css global -->
     </head>
     body
-        .chart
-        .chart2
-        .chart3
+        <div class="charts-container">
+            <div class="onechart" data-chart-title="С начала 2019 года" data-chart="[1, 33, 11, 30, 12, 25]" data-chartlegend='["Количество обращений предпринимателей", "Тест 2", "Тест 3", "Тест 4", "Тест 5", "Тест 6"]'>
+                <div class="left">
+                <div id="chart1"></div>
+                </div>
+                <div class="right">
+                <div class="tit">Количество обращений (жалоб) предпринимателей</div>
+                <div class="tt">С начала 2019 года – <b>148</b>, за весь период – <b>4801</b> (в т.ч. устных 3111)</div>
+                <div id="chartLegend1"></div>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+        //- .chart
+        //- .chart2
+        //- .chart3
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="./js/chart.js"></script>
+        <script src="./js/chartOB.js"></script>
 
