--- a/src/pages/chart.pug
+++ b/src/pages/chart.pug
@@ -13,14 +13,25 @@ html(lang="ru")
     </head>
     body
         <div class="charts-container">
-            <div class="onechart" data-chart-title="С начала 2019 года" data-chart="[1, 33, 11, 30, 12, 25]" data-chartlegend='["Количество обращений предпринимателей", "Тест 2", "Тест 3", "Тест 4", "Тест 5", "Тест 6"]'>
+            <div class="onechart" id="chart1" data-chart-title="С начала 2019 года" data-chart="[3, 2, 5, 8, 12, 25, 13, 44, 2, 15]" data-chartlegend='["САО", "СЗАО", "ЗАО", "ЮЗАО", "ЮАО", "СВАО", "ЦАО", "ЗелАО", "МО", "ТиНАО"]'>
                 <div class="left">
-                <div id="chart1"></div>
+                    <div class="chartWrap"></div>
                 </div>
                 <div class="right">
-                <div class="tit">Количество обращений (жалоб) предпринимателей</div>
-                <div class="tt">С начала 2019 года – <b>148</b>, за весь период – <b>4801</b> (в т.ч. устных 3111)</div>
-                <div id="chartLegend1"></div>
+                    <div class="tit">Количество обращений (жалоб) предпринимателей</div>
+                    <div class="tt">С начала 2019 года – <b>148</b>, за весь период – <b>4801</b> (в т.ч. устных 3111)</div>
+                    <div class="legendsWrap"></div>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+            <div class="onechart" id="chart2" data-chart-title="С начала 2019 года" data-chart="[44, 6, 13, 33, 12, 2]" data-chartlegend='["Права интеллектуальной собственности", "Транспорт", "Производство", "Строительство", "Антимонопольное регулирование", "Имущественноземельные отношения"]'>
+                <div class="left">
+                    <div class="chartWrap"></div>
+                </div>
+                <div class="right">
+                    <div class="tit">Количество обращений (жалоб) предпринимателей</div>
+                    <div class="tt">С начала 2019 года – <b>148</b>, за весь период – <b>4801</b> (в т.ч. устных 3111)</div>
+                    <div class="legendsWrap"></div>
                 </div>
                 <div class="clearfix"></div>
             </div>
